# giftday-bot

./: pyproject.toml
