[tool.poetry]
name = "giftday-bot"
version = "0.1.0"
description = ""
authors = ["maksimelyyan <maksim.romanov@teachbase.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^20.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
